# x2loc

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
scripts/: batch_glossary.py  batch_scan.py  batch_upload.py
src/: _share.py
src/agent/: _share.py  config.py  graph.py  llm.py  prompts.py  runner.py  state.py  tools.py
src/agent/nodes/: __init__.py  _helpers.py  context_collector.py  decision_router.py  fetch_empty.py  glossary_loader.py  pattern_extractor.py  scorer.py  tag_validator.py  translator.py  uploader.py  user_review.py
src/cli/: app.py
src/core/: _share.py  aligner.py  converter.py  extractor.py  loc_writer.py  mod_resolver.py  parser.py
src/export/: writer.py
src/models/: _share.py  corpus.py  entry.py  file.py  glossary.py  mod.py  section.py  weblate.py
src/services/: weblate.py
tests/: conftest.py  test_aligner.py  test_cli.py  test_converter.py  test_extractor.py  test_integration.py  test_loc_writer.py  test_mod_resolver.py  test_parser.py  test_weblate.py  test_writer.py
tests/agent/: test_tools.py
