[project]
name = "x2loc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "pydantic>=2.12.5",
    "typer>=0.24.1",
    "unidecode>=1.4.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "respx>=0.23.1",
    "ruff>=0.15.9",
    "ty>=0.0.29",
]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP", "SIM", "RUF", "N"]
# RUF001/RUF002/RUF003: Chinese full-width punctuation is legitimate in
# this localization project (source/target strings, docstrings).
ignore = ["E501", "N805", "N806", "RUF001", "RUF002", "RUF003", "RUF012"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true
